deploy: 96b42ab4298bed84a38ae23ea817788520e70d18

--- a/conventions/custom_model_id.html
+++ b/conventions/custom_model_id.html
@@ -164,7 +164,7 @@
 <p>This convention aims to reduce conflict between <a href="https://minecraft.gamepedia.com/Resource_pack">resource packs</a> within the <a href="https://minecraft.gamepedia.com/Model#Item_tags">custom model data</a> system as much as possible by assigning a unique ID for every creator to use.</p>
 <h2><a class="header" href="#1-register-your-id" id="1-register-your-id">1. Register your ID</a></h2>
 <p>Your &quot;id&quot; is an integer between 1-999 which we'll use as a unique namespace.</p>
-<p>You can register your ID at <a href="https://mc-datapacks.web.app/custom_model_id">https://mc-datapacks.web.app</a>.</p>
+<p>You can register your ID at <a href="https://mcdatapacks.vercel.app/">https://mcdatapacks.vercel.app/</a>.</p>
 <h2><a class="header" href="#2-prefix-your-model-with-your-id" id="2-prefix-your-model-with-your-id">2. Prefix your model with your id</a></h2>
 <p>You will prefix your custom model data with your ID in this format, where <code>XXX</code> is your ID and <code>0000</code> is your unique custom model data.</p>
 <table><thead><tr><th>id</th><th>cmd</th></tr></thead><tbody>
