--- a/print.html
+++ b/print.html
@@ -294,19 +294,19 @@ If you are working on a project with multiple people you can choose to:</p>
 <h2><a class="header" href="#about-3" id="about-3">About</a></h2>
 <p>This convention is intended to bring the Ore Dictionary system from <a href="http://files.minecraftforge.net/">Forge</a> to datapack's custom items. This is done by utilizing Item's custom NBT feature. We can insert any kind of NBT inside Item, which we can access using other commands.</p>
 <p>With that, we can create a unified lookup system that every datapack can use to search for a specific item they want. You can then use the Common Trait Convention's provided syntax to construct a search function to find the item you need.</p>
-<h3><a class="header" href="#example-usage" id="example-usage">Example Usage</a></h3>
+<h2><a class="header" href="#example-usage" id="example-usage">Example Usage</a></h2>
 <p>It can be hard to visualize how this convention would be useful in the real world, so we compiled some useful usage that would not be possible without this convention.</p>
 <ol>
 <li>Suppose you added a <code>custom furnace</code> which let you smelt copper ore into ingots. With this convention, you can detect for <strong>any</strong> copper ore from any datapacks to smelt it.</li>
 <li>Suppose you added a <code>fridge</code> which only accepts food items. With this convention, you can detect <strong>any</strong> food items, even the custom ones from other datapacks.</li>
 <li>Suppose you added a <code>custom anvil</code> which lets you repair tools straight from the material instead of the ingot. With this convention, you can detect <strong>any</strong> kind of material from other datapacks, even when the base material doesn't match.</li>
 </ol>
-<h3><a class="header" href="#traits" id="traits">Traits</a></h3>
+<h2><a class="header" href="#traits" id="traits">Traits</a></h2>
 <p>Traits represent behavior and properties that an object can have. By specifying these traits inside the item's NBT, other datapacks will be able to refer to that item via traits instead of item IDs directly.</p>
 <p>Traits are a compound tag of strings to booleans and so will look like this in NBT (notice <code>traits: {...}</code>?)</p>
 <pre><code class="language-mcfunction">/give @s diamond{ctc: {traits: {&quot;some&quot;: 1b, &quot;trait&quot;: 1b, &quot;here&quot;: 1b}, id: &quot;example&quot;, from: &quot;convention:wiki&quot;}}
 </code></pre>
-<h3><a class="header" href="#syntax" id="syntax">Syntax</a></h3>
+<h2><a class="header" href="#syntax" id="syntax">Syntax</a></h2>
 <p>Common Trait Convention's syntax will be stored inside the <code>ctc</code> NBT of item. Inside <code>ctc</code> are the NBT tags: <code>id</code>, <code>from</code> and <code>traits</code>.</p>
 <ul>
 <li><code>id</code>: The internal ID of your item. This doesn't matter outside your datapack, but <em>should</em> be unique within your datapack.</li>
@@ -332,7 +332,13 @@ This means every trait must have a value of <code>1b</code> or <code>true</code>
 <li><code>block</code>. This trait tells us that this item is a placeable block.</li>
 <li><code>ore</code>. This trait tells us that this item is an ore.</li>
 </ul>
-<h4><a class="header" href="#slash-notation" id="slash-notation">Slash Notation</a></h4>
+<h3><a class="header" href="#note-1" id="note-1">Note</a></h3>
+<ul>
+<li>When you are attempting to check for custom item using <code>id</code> tag <strong>must</strong> be done alongside <code>from</code> tag as well, you cannot separate it because it would break compatibility.</li>
+<li>The opposite of the above is not true, you can check for <code>from</code> tag without requiring <code>id</code> tag.</li>
+<li>If you use <code>id</code> tag to check for custom item, there is no need to check for <code>traits</code> tag as well.</li>
+</ul>
+<h2><a class="header" href="#slash-notation" id="slash-notation">Slash Notation</a></h2>
 <p>In the above example, you will notice the use of <code>/</code> in <code>metal/copper</code>. This is used for categorization, when a name alone could be ambiguous or difficult to understand. For example, what would the trait <code>orange</code> mean? Is it the <em>color</em> orange or the <em>fruit</em> orange?</p>
 <p>In such a case we'd use slash notation to separate them. <code>color/orange</code> and <code>fruit/orange</code></p>
 <h2><a class="header" href="#usage" id="usage">Usage</a></h2>
@@ -499,7 +505,7 @@ This means every trait must have a value of <code>1b</code> or <code>true</code>
     ]
 }
 </code></pre>
-<h2><a class="header" href="#note-1" id="note-1">Note</a></h2>
+<h2><a class="header" href="#note-2" id="note-2">Note</a></h2>
 <p>This convention does not enforce any restrictions from the 8th digit onwards. Datapackers could utilize this to gain a few more model slots if they wanted to. (the digit index is count from right-to-left of course)</p>
 <h1><a class="header" href="#global-ignoring-tag-" id="global-ignoring-tag-">Global Ignoring Tag (<code>***</code>)</a></h1>
 <h2><a class="header" href="#about-5" id="about-5">About</a></h2>
@@ -527,7 +533,7 @@ This means every trait must have a value of <code>1b</code> or <code>true</code>
 <blockquote>
 <p>This tag does not apply to player-only selectors (<code>@a</code>, <code>@e[type=player]</code>, <code>@p</code>, etc.)</p>
 </blockquote>
-<h2><a class="header" href="#note-2" id="note-2">Note</a></h2>
+<h2><a class="header" href="#note-3" id="note-3">Note</a></h2>
 <p>The convention only applies if your function will affect an unknown entity. If you are trying to target a known entity (e.g. an entity with a special tag attached specific to your datapack), you don't need to follow this convention.</p>
 <h1><a class="header" href="#global-durability-" id="global-durability-">Global Durability (<code>*</code>)</a></h1>
 <h2><a class="header" href="#about-6" id="about-6">About</a></h2>
@@ -550,7 +556,7 @@ This means every trait must have a value of <code>1b</code> or <code>true</code>
 <li><code>durability</code> is the maximum durability of the tool or the maximum damage the tool can take.</li>
 <li><code>broken</code> is a boolean specifying whether the item is &quot;broken&quot; (i.e. <a href="https://minecraft.gamepedia.com/Elytra">Broken Elytra</a>). This tag can be used in the case where you don't want to destroy the item when it runs out of durability.</li>
 </ul>
-<h2><a class="header" href="#note-3" id="note-3">Note</a></h2>
+<h2><a class="header" href="#note-4" id="note-4">Note</a></h2>
 <p>The convention only enforces <em>where</em> the tag should be, it does not enforce the method by which you reduce durability. It also does not require that you have to keep <code>damage</code> and the vanilla <code>Damage</code> tag in sync.</p>
 <h1><a class="header" href="#namespace-convention-" id="namespace-convention-">Namespace Convention (<code>***</code>)</a></h1>
 <h2><a class="header" href="#about-7" id="about-7">About</a></h2>
@@ -576,7 +582,7 @@ This means every trait must have a value of <code>1b</code> or <code>true</code>
 <p>In this example, I wrap the <code>custom_data</code> nbt inside another tag, allowing it to act as a namespace.</p>
 <hr />
 <p>The above examples are my style of namespacing, but there are many other approaches that you can take, such as <code>namespace_foo</code>, <code>NAMESPACEfoo</code>, <code>namespace.foo</code>, <code>namespace:foo</code> and <code>namespace/foo</code>. Your imagination is the limit!</p>
-<h2><a class="header" href="#note-4" id="note-4">Note</a></h2>
+<h2><a class="header" href="#note-5" id="note-5">Note</a></h2>
 <p>Using <code>minecraft</code> namespace to modify vanilla's behavior is a special case and it is allowed within a reasonable situation.<br />
 However, for example, setting <code>&quot;replace&quot;</code> to <code>true</code> in the <code>tick.json</code> function tag is not a &quot;reasonable situation&quot;, because that would prevent other datapacks from working.</p>
 <h1><a class="header" href="#shulker-box-loot-table-" id="shulker-box-loot-table-">Shulker Box Loot Table (<code>***</code>)</a></h1>
@@ -693,7 +699,7 @@ It group every installed datapacks in one place that is easily accessible for an
 <li>Datapack must be portable, it must not be tied down to a specific save.</li>
 <li>Datapack must follow all of <strong>Tier 3</strong> Conventions.</li>
 </ul>
-<h2><a class="header" href="#note-5" id="note-5">Note</a></h2>
+<h2><a class="header" href="#note-6" id="note-6">Note</a></h2>
 <ol>
 <li>We may rule a datapack out at our discretion, for reasons we would then specify.</li>
 <li>This requirement is not final and can be changed in the future.</li>
@@ -765,7 +771,7 @@ loot replace entity &lt;player&gt; weapon.offhand 1 mine ~ ~ ~ air{drop_contents
 data remove storage &lt;storage&gt; batch
 data remove storage &lt;storage&gt; inventory
 </code></pre>
-<h2><a class="header" href="#note-6" id="note-6">Note</a></h2>
+<h2><a class="header" href="#note-7" id="note-7">Note</a></h2>
 <p>In this example, I assume that you need to modify NBT of all available slots, but if you want to, say, modify only items in your hotbar, then you don't need to use the unneeded batches, e.g. the &quot;inventory&quot;, &quot;armor&quot; and &quot;offhand&quot; batches.</p>
 <h1><a class="header" href="#holding-right-click-detection" id="holding-right-click-detection">Holding Right Click Detection</a></h1>
 <h2><a class="header" href="#about-10" id="about-10">About</a></h2>
@@ -814,7 +820,7 @@ scoreboard players set @s &lt;coas&gt; 0
 <p>5. Conclusion
 If <code>&lt;timer&gt;</code> is more than 0, we know that the player has right clicked within the last 5 ticks, since <code>&lt;timer&gt;</code> decreases by 1 every tick, and every time a right click is performed <code>&lt;timer&gt;</code> is set to 5 again.<br />
 We can use <code>execute if score @s &lt;timer&gt; matches 1..</code> to know if <code>&lt;timer&gt;</code> is more than or equal to 1.</p>
-<h2><a class="header" href="#note-7" id="note-7">Note</a></h2>
+<h2><a class="header" href="#note-8" id="note-8">Note</a></h2>
 <ul>
 <li><code>&lt;...&gt;</code> is a placeholder value that you have to replace with your own value.</li>
 <li><code>[...]</code> is a placeholder path to display relationship between each functions.</li>
