deploy: 1c3c2146347c3bf7fa1f2ad4ceead0b131b8e7e3

--- a/print.html
+++ b/print.html
@@ -693,6 +693,23 @@ It group every installed datapacks in one place that is easily accessible for an
 <blockquote>
 <p>Certified Datapacks have the benefit that they are guaranteed to be compatible with other datapacks.</p>
 </blockquote>
+<h1><a class="header" href="#social-media" id="social-media">Social Media</a></h1>
+<p>We have created an &quot;official tag&quot; for various platform that you can include to indicate that your content is certified.</p>
+<blockquote>
+<p>You <strong>must not</strong> use these tags in an attempt to appear as certified if your datapack is not certified!</p>
+</blockquote>
+<p>The following tags should be self-explanatory but if you feel that it isn't, please report this.</p>
+<ul>
+<li>GitHub: <code>mcdp-certified</code> and <code>mcdp-quality</code></li>
+<li>Twitter: <code>#CertifiedMCDatapack</code> and <code>#QualityMCDatapack</code></li>
+<li>PlanetMinecraft: <code>mcdp_certified</code> and <code>mcdp_quality</code></li>
+</ul>
+<p>We also have the official account on these platform as well:</p>
+<ul>
+<li>Twitter: <a href="https://twitter.com/mcdatapacks">@mcdatapacks</a></li>
+<li>GitHub: <a href="https://github.com/mcdatapack">@mcdatapack</a></li>
+<li>PlanetMinecraft: <a href="https://www.planetminecraft.com/member/mcdatapack/">mcdatapack</a></li>
+</ul>
 <h1><a class="header" href="#requirement" id="requirement">Requirement</a></h1>
 <p>A datapack must satisfy these requirements to receive the Certified Datapack title</p>
 <ul>
